# rsbind

./: .gitignore
demo/: Rsbind.toml
docs/: env.md
template/template-bridge-android/: Cargo.toml
tools-rsbind/: Cargo.toml
tools-rsbind/src/: cargo.rs  lib.rs  main.rs
tools-rsbind/src/android/: bridge.rs  callback.rs  config.rs  dest.rs  process.rs
tools-rsbind/src/android/res/template_bridge_android/: Cargo.toml
tools-rsbind/src/ast/: mod.rs  types.rs
tools-rsbind/src/ast/contract/: parser.rs
tools-rsbind/src/ast/imp/: parser.rs
tools-rsbind/src/bridge/: file.rs  gen.rs  prj.rs
tools-rsbind/src/ios/: bridge.rs  callback.rs  config.rs  dest.rs  process.rs
tools-rsbind/src/ios/res/: swift_gen
tools-rsbind/src/ios/res/template_bridge_ios/: Cargo.toml
tools-rsbind/src/ios/res/template_ios/SM/: Surfile
tools-rsbind/src/ios/res/template_ios/rustlib/: ffi.swift  ffiDictionary.swift
tools-rsbind/src/ios/res/template_ios/rustlib.xcodeproj/: project.pbxproj
tools-swift-gen/Sources/SwiftGenCore/: CallbackGenerator.swift  SwiftGenCore.swift  TraitDesc.swift  TraitGenerator.swift
tools-swift-gen/Sources/SwiftPoet/: TypeName.swift
