[package]
name = "rsbind"
version = "0.1.0"
authors = ["sidney.wang <sidney.wang@foxmail.com>"]

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.18"
cbindgen = "0.19.0"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
zip = "0.5.5"
fs_extra = "1.2.0"
toml = "0.5.6"
jni = { version = "0.19.0", default-features = false }
# jni = { git = "https://github.com/prevoty/jni-rs" }
error-chain = "0.12.1"
genco = "0.4.0"
# genco = {git = "https://github.com/sidneywang/genco", branch="master"}

[dependencies.syn]
version = "1.0.75"
# default_features = false
features = ["quote", "fold", "visit-mut", "visit", "full", "extra-traits"]

[lib]
name = "rsbind_core"
path = "src/lib.rs"

[[bin]]
name = "rsbind"
path = "src/main.rs"
