[package]
name = "$(*521%-host_crate_underscore)_android_bridge_prj"
version = "0.1.0"
authors = ["sidney.wang <sidney.wang@foxmail.com.com>"]

#[workspace]
#members = []

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
$(*521%-host_crate) = { path = "../../"}
# add detach current thread function
jni = { git = "https://github.com/ricoLv/jni-rs", branch = "sdk" }
#jni = { version = "0.19", default-features = false }
# jni = { git = "https://github.com/king6cong/jni-rs", branch = "sdk" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
lazy_static = "1.0.0"
android_logger = "=0.10.1"
log = "0.4"

[features]
rsbind = []
$(*521%-features)