[package]
name = "$(*521%-host_crate_underscore)_android_bridge_prj"
version = "0.1.0"
authors = ["sidney.wang <sidney.wang@foxmail.com.com>"]

#[workspace]
#members = []

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'


[dependencies]
$(*521%-host_crate) = { path = "../../", default-features = $(*521%-default_features) }
jni = { git = "https://github.com/king6cong/jni-rs", branch = "sdk" }
serde_json = "1"
serde_derive = "1"
serde = "1.0"
lazy_static = "1.4"
android_logger = "0.10"
log = "0.4"

[features]
rsbind = []
$(*521%-features)